# My_Gripper

./: .clang-format  .pre-commit-config.yaml  README.md
.github/workflows/: build.yml
CAD/FreeCAD/: my_finger_50.FCStd  my_finger_50.FCStd1  my_finger_clean.FCStd  my_finger_clean.FCStd1  my_gear.FCStd  my_gear.FCStd1  my_gear2.FCStd  my_horn.FCStd  robot_connector.FCStd
CAD/STLs/: my_finger_clean-adaos_12 mm.stl  my_finger_clean-finger.stl  my_gear-Cut006.stl  my_gripper-finger_left.stl  my_gripper-servo_bottom_cover.stl  my_gripper-servo_front_cover001.stl  my_gripper-slidet_pathing_way.stl  my_gripper-ur_connector001.stl
firmware/: LICENSE  platformio.ini
firmware/src/: main.cpp
my_gripper_description/: CMakeLists.txt  package.xml
my_gripper_description/launch/: display.launch.py
my_gripper_description/meshes/: finger_50.dae  finger_50.stl  finger_80.dae  slider.dae  slider.stl
my_gripper_description/rviz/: urdf.rviz
my_gripper_description/urdf/: ur_wifi_gripper.urdf.xacro  wifi_gripper.ros2_control.xacro  wifi_gripper.urdf.xacro  wifi_gripper.xacro
my_gripper_moveit_config/: CMakeLists.txt  package.xml
my_gripper_moveit_config/config/: controllers.yaml  controllers_gripper.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  sensors_kinect_depthmap.yaml  sensors_kinect_depthmap_2.yaml  sensors_kinect_pointcloud.yaml
my_gripper_moveit_config/launch/: ur_wifi_gripper_moveit.launch.py  wifi_gripper_moveit.launch.py
my_gripper_moveit_config/rviz/: moveit.rviz  urdf.rviz  view_robot.rviz  view_robot_pointcloud.rviz
my_gripper_moveit_config/srdf/: ur_wifi_gripper.srdf.xacro  wifi_gripper.srdf.xacro  wifi_gripper_macro.srdf.xacro
wifi_gripper_driver/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
wifi_gripper_driver/config/: ur_wifi_gripper_controllers.yaml  wifi_gripper_controllers.yaml
wifi_gripper_driver/include/wifi_gripper_driver/: hardware_interface.hpp  visibility_control.h  wifi_gripper_interface.hpp
wifi_gripper_driver/launch/: gripper_test.launch.py  ur_gripper_control.launch.py  wifi_gripper_control.launch.py
wifi_gripper_driver/src/: gripper_interface_test.cpp  gripper_interface_test2.cpp  gripper_test.cpp  hardware_interface.cpp  wifi_gripper_interface.cpp
